--- a/DisplayMiniportDriver/DisplayMiniportDriver/DisplayMiniportDriver.vcxproj
+++ b/DisplayMiniportDriver/DisplayMiniportDriver/DisplayMiniportDriver.vcxproj
@@ -554,30 +554,30 @@ xcopy /y $(SolutionDir)..\UserModeDrivers\bin\x64\$(Configuration)\D3DUserModeDr
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DriverVersionNumbers.h" />
-    <ClInclude Include="include\AddDevice.hpp" />
+    <ClInclude Include="include\miniport\AddDevice.hpp" />
     <ClInclude Include="include\BlockTransfer.hpp" />
-    <ClInclude Include="include\CloseAllocation.hpp" />
-    <ClInclude Include="include\CollectDbgInfo.hpp" />
-    <ClInclude Include="include\CommitVidPn.hpp" />
+    <ClInclude Include="include\miniport\CloseAllocation.hpp" />
+    <ClInclude Include="include\miniport\CollectDbgInfo.hpp" />
+    <ClInclude Include="include\miniport\CommitVidPn.hpp" />
     <ClInclude Include="include\Common.h" />
     <ClInclude Include="include\shared\MessageType.h" />
     <ClInclude Include="include\Config.h" />
-    <ClInclude Include="include\ControlEtwLogging.hpp" />
-    <ClInclude Include="include\ControlInterrupt.hpp" />
-    <ClInclude Include="include\CreateAllocation.hpp" />
-    <ClInclude Include="include\CreateContext.hpp" />
-    <ClInclude Include="include\CreateDevice.hpp" />
+    <ClInclude Include="include\miniport\ControlEtwLogging.hpp" />
+    <ClInclude Include="include\miniport\ControlInterrupt.hpp" />
+    <ClInclude Include="include\miniport\CreateAllocation.hpp" />
+    <ClInclude Include="include\miniport\CreateContext.hpp" />
+    <ClInclude Include="include\miniport\CreateDevice.hpp" />
     <ClInclude Include="include\D3DPolyFills.h" />
-    <ClInclude Include="include\DestroyAllocation.hpp" />
-    <ClInclude Include="include\DestroyContext.hpp" />
-    <ClInclude Include="include\DestroyDevice.hpp" />
+    <ClInclude Include="include\miniport\DestroyAllocation.hpp" />
+    <ClInclude Include="include\miniport\DestroyContext.hpp" />
+    <ClInclude Include="include\miniport\DestroyDevice.hpp" />
     <ClInclude Include="include\comms\DeviceComms.hpp" />
     <ClInclude Include="include\Devices.hpp" />
-    <ClInclude Include="include\DevThunks.hpp" />
-    <ClInclude Include="include\DispatchIoRequest.hpp" />
-    <ClInclude Include="include\DpcRoutine.hpp" />
+    <ClInclude Include="include\miniport\DevThunks.hpp" />
+    <ClInclude Include="include\miniport\DispatchIoRequest.hpp" />
+    <ClInclude Include="include\miniport\DpcRoutine.hpp" />
     <ClInclude Include="include\DriverVersion.h" />
-    <ClInclude Include="include\EnumVidPnCofuncModality.hpp" />
+    <ClInclude Include="include\miniport\EnumVidPnCofuncModality.hpp" />
     <ClInclude Include="include\comms\FilterConnectNotify.h" />
     <ClInclude Include="include\comms\FilterDeviceManager.h" />
     <ClInclude Include="include\comms\FilterDisconnectNotify.h" />
@@ -585,40 +585,40 @@ xcopy /y $(SolutionDir)..\UserModeDrivers\bin\x64\$(Configuration)\D3DUserModeDr
     <ClInclude Include="include\comms\FilterInstanceSetup.h" />
     <ClInclude Include="include\comms\FilterMessageNotify.h" />
     <ClInclude Include="include\comms\FilterUnload.h" />
-    <ClInclude Include="include\GetScanLine.hpp" />
+    <ClInclude Include="include\miniport\GetScanLine.hpp" />
     <ClInclude Include="include\GsGraphicsContext.hpp" />
     <ClInclude Include="include\GsPresentManager.hpp" />
     <ClInclude Include="include\GsLogicalDevice.hpp" />
     <ClInclude Include="include\HyDevice.hpp" />
     <ClInclude Include="include\I2CInterface.h" />
-    <ClInclude Include="include\InterruptRoutine.hpp" />
-    <ClInclude Include="include\IsSupportedVidPn.hpp" />
+    <ClInclude Include="include\miniport\InterruptRoutine.hpp" />
+    <ClInclude Include="include\miniport\IsSupportedVidPn.hpp" />
     <ClInclude Include="include\Logging.h" />
     <ClInclude Include="include\GsMemoryManager.hpp" />
     <ClInclude Include="include\Objects.hpp" />
-    <ClInclude Include="include\OpenAllocation.hpp" />
-    <ClInclude Include="include\PresentDisplayOnly.hpp" />
-    <ClInclude Include="include\RecommendFunctionalVidPn.hpp" />
-    <ClInclude Include="include\RecommendMonitorModes.hpp" />
+    <ClInclude Include="include\miniport\OpenAllocation.hpp" />
+    <ClInclude Include="include\miniport\PresentDisplayOnly.hpp" />
+    <ClInclude Include="include\miniport\RecommendFunctionalVidPn.hpp" />
+    <ClInclude Include="include\miniport\RecommendMonitorModes.hpp" />
     <ClInclude Include="include\RegisterMemCopy.h" />
     <ClInclude Include="include\MemoryAllocator.h" />
-    <ClInclude Include="include\NotifyAcpiEvent.hpp" />
-    <ClInclude Include="include\QueryAdapterInfo.hpp" />
-    <ClInclude Include="include\QueryChildRelations.hpp" />
-    <ClInclude Include="include\QueryChildStatus.hpp" />
-    <ClInclude Include="include\QueryDeviceDescriptor.hpp" />
-    <ClInclude Include="include\QueryInterface.hpp" />
-    <ClInclude Include="include\RemoveDevice.hpp" />
-    <ClInclude Include="include\ResetDevice.hpp" />
-    <ClInclude Include="include\SetPowerState.hpp" />
-    <ClInclude Include="include\SetVidPnSourceAddress.hpp" />
-    <ClInclude Include="include\SetVidPnSourceVisibility.hpp" />
+    <ClInclude Include="include\miniport\NotifyAcpiEvent.hpp" />
+    <ClInclude Include="include\miniport\QueryAdapterInfo.hpp" />
+    <ClInclude Include="include\miniport\QueryChildRelations.hpp" />
+    <ClInclude Include="include\miniport\QueryChildStatus.hpp" />
+    <ClInclude Include="include\miniport\QueryDeviceDescriptor.hpp" />
+    <ClInclude Include="include\miniport\QueryInterface.hpp" />
+    <ClInclude Include="include\miniport\RemoveDevice.hpp" />
+    <ClInclude Include="include\miniport\ResetDevice.hpp" />
+    <ClInclude Include="include\miniport\SetPowerState.hpp" />
+    <ClInclude Include="include\miniport\SetVidPnSourceAddress.hpp" />
+    <ClInclude Include="include\miniport\SetVidPnSourceVisibility.hpp" />
     <ClInclude Include="include\shared\CreateAllocationDriverData.hpp" />
     <ClInclude Include="include\shared\DriverDataIdentifiers.hpp" />
-    <ClInclude Include="include\StartDevice.hpp" />
-    <ClInclude Include="include\StopDevice.hpp" />
-    <ClInclude Include="include\StopDeviceAndReleasePostDisplayOwnership.hpp" />
-    <ClInclude Include="include\UpdateActiveVidPnPresentPath.hpp" />
+    <ClInclude Include="include\miniport\StartDevice.hpp" />
+    <ClInclude Include="include\miniport\StopDevice.hpp" />
+    <ClInclude Include="include\miniport\StopDeviceAndReleasePostDisplayOwnership.hpp" />
+    <ClInclude Include="include\miniport\UpdateActiveVidPnPresentPath.hpp" />
     <ClInclude Include="include\XStdDefPolyFill.h" />
     <ClInclude Include="WddmMajorVersion.h" />
     <ClInclude Include="WddmMinorVersion.h" />
