--- a/DisplayMiniportDriver/DisplayMiniportDriver/DisplayMiniportDriver.vcxproj.filters
+++ b/DisplayMiniportDriver/DisplayMiniportDriver/DisplayMiniportDriver.vcxproj.filters
@@ -210,6 +210,9 @@
     <ClCompile Include="src\entry\DriverEntry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\DriverConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\MemoryAllocator.h">
@@ -417,6 +420,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\miniport\DestroyAllocation.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DriverConfig.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
